mobile header layout, buttons; fix IE10 scrollbar

--- a/_source/stylesheets/base/_basics.less
+++ b/_source/stylesheets/base/_basics.less
@@ -2,6 +2,11 @@ html {
     overflow-y: scroll;
     // ensure vertical scrollbar, to avoid layout jumping on short pages
 }
+
+@-ms-viewport {
+  width: auto;
+}
+
 .page {
     min-width: 320px;
 }
